syntax = "proto3";

package erda.core.monitor.alertdetail;
option go_package = "github.com/erda-project/erda-proto-go/core/monitor/alertdetail/pb";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

service AlertDetailService {
  rpc QuerySystemPodMetrics (QuerySystemPodMetricsRequest) returns (QuerySystemPodMetricsResponse) {
    option (google.api.http) = {
      get: "/api/system/pod/status",
    };
  }
}

message QuerySystemPodMetricsRequest {
  string name        = 1 [(validator.field) = {string_not_empty: true}];
  string clusterName = 2 [(validator.field) = {string_not_empty: true}];
  int64  timestamp   = 3 [(validator.field) = {int_gt: 1800000}];
}

message QuerySystemPodMetricsResponse {
  PodInfo data = 1;
}

message PodInfo {
  PodInfoSummary           summary   = 1;
  repeated PodInfoInstanse instances = 2;
}

message PodInfoSummary {
  string clusterName      = 1;
  string nodeName         = 2;
  string hostIP           = 3;
  string namespace        = 4;
  string podName          = 5;
  int64  restartTotal     = 6;
  int64  stateCode        = 7;
  string terminatedReason = 8;
}

message PodInfoInstanse {
  string containerId = 1;
  string hostIP      = 2;
  string startedAt   = 3;
  string finishedAt  = 4;
  int64  exitCode    = 5;
  bool   oomKilled   = 6;
}
